--- a/public/index.html
+++ b/public/index.html
@@ -10,36 +10,92 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet">
-
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.19.38/system.js" type="text/javascript"></script>
     <title>React App</title>
+
+    <style>
+      .e-quick-popup-wrapper .e-event-popup .e-popup-header {
+        background: transparent;
+      }
+      .e-quick-popup-wrapper .e-event-popup .e-popup-footer {
+        display: block;
+      }
+    </style>
+
+    <script id="headerTemplate" type="text/x-template">
+      <div>
+          ${if(elementType === 'cell')}
+            <div class="row">
+              <div class="col-md-12">
+                <button class="e-close" title="Close"></button>              
+              </div>
+            </div>
+          ${ else }
+            <div class="row">
+              <div class="col-md-12">
+                <button class="e-close" title="Close" style="background: transparent;"></button>              
+              </div>
+            </div>
+          ${/if}
+      </div>
+  </script>
+
+  <script id="contentTemplate" type="text/x-template">
+    <div>
+      ${ if(elementType === 'cell') }
+        <div class="row">
+          <div class="col-md-12">
+            <form class="e-schedule-form">
+              <div class="form-group">
+                <label for="title">Title</label>
+                <input class="e-subject e-field form-control" id="title" type="text" name="Subject" value="" id="Subject" title="Title">
+              </div>
+              <div class="form-group">
+                <label for="description">Description</label>
+                <textarea class="e-description e-field form-control" type="text" name="Description" value="" id="Description" title="Description"></textarea>
+              </div>
+            </form>
+          </div>
+        </div>
+      ${ else }
+      <div class="row">
+        ${ if (Subject) }<div class="col-md-12"><h1>${Subject}</h1></div>${/if}
+        ${ if (Description) }<div class="col-md-12"><h4>${Description}</h4></div>${/if}
+      </div>
+      ${/if}
+    </div>
+  </script>
+
+  <script id="footerTemplate" type="text/x-template">
+      <div>
+          ${ if (elementType === 'cell') }
+            <div class="e-cell-footer">
+                <button class="e-event-details" title="Additional Details">More</button>
+                <button class="e-event-create" title="Add">Add</button>
+            </div>
+          ${else}
+            <div class="row">
+              <div class="col-md-6">
+                <button class="btn btn-danger" title="Close">Cancel</button>
+              </div>
+              <div class="col-md-6">
+                <button class="btn btn-warning" title="Reschedule">Reschedule</button>
+              </div>
+            </div>
+          ${/if}
+      </div>
+  </script>
   </head>
   <body>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
   </body>
 </html>
